--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+    <link rel="stylesheet" href="../css/project.css">
 <title>movie ticket booking form</title>
     </head>
     <body>
