--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -9,14 +9,14 @@
     <img src="../icons/tv.png" class="icon"/>
     <hr/>
     <form>
-<label for="loaction">enter your location:</label>
+<label for="loaction" class="location">Enter your location:</label>
 <input type="text" /><br/><br/>
-<label for="select theatre">select theatre:</label>
-            <select id="select theatre">
-                <option>choose theatre:</option>
-                <option>inox theatre</option>
-                <option>imax theatre</option>
-                <option>marvel theatre</option>
+<label for="select theatre">Select theatre:</label>
+            <select id="select theatre" class="id">
+                <option>Choose theatre:</option>
+                <option>Inox theatre</option>
+                <option>Imax theatre</option>
+                <option>Marvel theatre</option>
                 <option>Dc theatre</option>
             </select><br/><br/>
  <label for="select movies">SELECT MOVIE:</label><br/><br/>
@@ -33,7 +33,7 @@
 <input type="datetime-local" id="select date and time" /><br/><br/>
 <label for="seatnumber">Enter seatnumber:</label>
 <input type="number" id="seatnumber" /><br/><br/>
-<input type="submit" value="BOOK NOW" />
+<input type="submit" value="BOOK NOW" class="submit" />
 <hr/>
     </form>
     </body>
