--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -9,8 +9,8 @@
     <img src="../icons/tv.png" class="icon"/>
     <hr/>
     <form>
-<label for="loaction" class="location">Enter your location:</label>
-<input type="text" /><br/><br/>
+<label for="loaction">Enter your location:</label>
+<input type="text" class="id"/><br/><br/>
 <label for="select theatre">Select theatre:</label>
             <select id="select theatre" class="id">
                 <option>Choose theatre:</option>
@@ -22,17 +22,17 @@
  <label for="select movies">SELECT MOVIE:</label><br/><br/>
  <img src="../images/12 fail.jpg" class="images" />
 <label for="movie 1">12<sup>th</sup> Fail</label>
-<input type="checkbox" id="movie 1" checked="true"/><br/><br/>
+<input type="checkbox"  id="movie 1" checked="true " /><br/><br/>
 <img src="../images/animal.jpg" class="images" />
 <label for="movie 2">Animal</label>
 <input type="checkbox" id="movie 2" /><br/><br/>
 <img src="../images/salaar.jpg" class="images" />
 <label for="movie 3">salaar</label>
 <input type="checkbox" id="movie 3" /><br/><br/>
-<label for="select date and time">Select Date & Time:</label>
-<input type="datetime-local" id="select date and time" /><br/><br/>
+<label for="select date and time" >Select Date & Time:</label>
+<input type="datetime-local" id="select date and time" class="id" /><br/><br/>
 <label for="seatnumber">Enter seatnumber:</label>
-<input type="number" id="seatnumber" /><br/><br/>
+<input type="number" id="seatnumber" class="id"/><br/><br/>
 <input type="submit" value="BOOK NOW" class="submit" />
 <hr/>
     </form>
