index page updated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index page</title>
-</head>
-<body>
-    <h1>this is index page</h1>
+
+    <!DOCTYPE html>
+<html>
+    <head>
+<title>login form</title>
+<link rel="stylesheet" href="../assignment_13/css/project.css">
+    </head>
+    <body>
+        <h1>Login Form</h1>
+        <hr/>
+    <img src="../assignment_13/icons/profile.png" height="100px" width="100px"/>
+    <form>
+<label for="login id">Enter login id:</label>
+<input type="text" id="login id" placeholder="enter login id" class="id"/> <br/><br/>
+<label for="password">Enter password:</label>
+<input type="password" id="password" placeholder="enter password" class="id"/><Br/><br/>
+<input type="submit" value="login" class="submit"/>
+<hr/>
+    </form>
+    </body>
+</html>
 </body>
 </html>
