--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>conatct page</title>
-</head>
-<body>
-    <h1>here is the conatct info </h1>
-</body>
+<html>
+    <head>
+        <title>Contact Page</title>
+        <h1>This is Contact Page</h1>
+         <image src="telephone.png" height="50px" width="50px"/><br/><br/>
+         <a href="tel:9975214296">Click here to contact us</a><br/><br/>
+         <image src="gmail.png" height="50px" width="50px"/><br/><br/>
+         <a href="mailto:yashkohakade@gmail.com">click here to mail us</a><br/><br/>
+         <a href="About.html">Click here to visit about page</a><br/><br/>
+         <a href="home.html">Click here to visit home page</a>
+    </head>
 </html>
