--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="../css/project.css">
         <title>Contact Page</title>
-        <h1>This is Contact Page</h1>
-         <image src="telephone.png" height="50px" width="50px"/><br/><br/>
-         <a href="tel:9975214296">Click here to contact us</a><br/><br/>
-         <image src="gmail.png" height="50px" width="50px"/><br/><br/>
-         <a href="mailto:yashkohakade@gmail.com">click here to mail us</a><br/><br/>
-         <a href="About.html">Click here to visit about page</a><br/><br/>
-         <a href="home.html">Click here to visit home page</a>
     </head>
+        <body>
+        <h1>This is Contact Page</h1>
+         <image src="../icons/telephone.png" class="icon" /><br/><br/>
+         <a href="tel:9975214296">Click here to contact us</a><br/><br/>
+         <image src="../icons/gmail.png" class="icon"/><br/><br/>
+         <a href="mailto:yashkohakade@gmail.com">click here to mail us</a><br/><br/>
+         <a href="about_page.html" >Click here to visit about page</a><br/><br/>
+         <a href="home_page.html" >Click here to visit home page</a>
+        </body>
 </html>
