--- a/pages/about_page.html
+++ b/pages/about_page.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/project.css">
     <title>about page</title>
 </head>
 <body>
-    <h1>this is about page</h1>
+    <h1 class="txt">About page</h1>
+    <p class="info">
+        This web site is about ticket booking of various movies.You can find the easiest way to book your seat.<br/>book fast and enjoy and have a pleasuraable experience.
+    </p>
+    <img src="../images/2ba143489ff592b769c2193d2de63847_resize.jpg"
 </body>
 </html>
