--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../assignment_13/css/project.css">
     </head>
     <body>
-        <h1>Login Form</h1>
+        <h1 class="txt">Login Form</h1>
         <hr/>
     <img src="../assignment_13/icons/profile.png" height="100px" width="100px"/>
     <form>
