--- a/pages/about_page.html
+++ b/pages/about_page.html
@@ -9,6 +9,7 @@
     <p class="info">
         This web site is about ticket booking of various movies.You can find the easiest way to book your seat.<br/>book fast and enjoy and have a pleasuraable experience.
     </p>
-    <img src="../images/2ba143489ff592b769c2193d2de63847_resize.jpg"
+<img src="../images/2ba143489ff592b769c2193d2de63847_resize.jpg" class="theatreimg" /> 
+    
 </body>
 </html>
