--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -5,7 +5,7 @@
         <title>Contact Page</title>
     </head>
         <body>
-        <h1>This is Contact Page</h1>
+        <h1 class="txt">This is Contact Page</h1>
          <image src="../icons/telephone.png" class="icon" /><br/><br/>
          <a href="tel:9975214296">Click here to contact us</a><br/><br/>
          <image src="../icons/gmail.png" class="icon"/><br/><br/>
