--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -5,7 +5,7 @@
 <title>movie ticket booking form</title>
     </head>
     <body>
-        <h1>TICKET BOOKING</h1>
+        <h1 class="txt">TICKET BOOKING</h1>
     <img src="../icons/tv.png" class="icon"/>
     <hr/>
     <form>
