--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -5,8 +5,8 @@
 <title>movie ticket booking form</title>
     </head>
     <body>
-        <h1 class="txt">TICKET BOOKING</h1>
-    <img src="../icons/tv.png" class="icon"/>
+        <h1 class="txt">TICKET BOOKING</h1>g
+    <hr/>
     <hr/>
     <form>
 <label for="loaction">Enter your location:</label>
